修改部分请求的身份识别方式，改为直接从token获取信息
